cargo_check_verify.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Updating crates.io index
     Locking 12 packages to latest compatible versions
      Adding base32 v0.5.1
      Adding bytemuck v1.25.0
      Adding byteorder-lite v0.1.0
      Adding constant_time_eq v0.3.1
      Adding fdeflate v0.3.7
      Adding image v0.25.9
      Adding moxcms v0.7.11
      Adding png v0.18.1
      Adding pxfm v0.1.27
      Adding qrcodegen v1.8.0
      Adding qrcodegen-image v1.5.1
      Adding totp-rs v5.7.0
 Downloading crates ...
  Downloaded byteorder-lite v0.1.0
  Downloaded totp-rs v5.7.0
  Downloaded qrcodegen-image v1.5.1
  Downloaded constant_time_eq v0.3.1
  Downloaded qrcodegen v1.8.0
  Downloaded fdeflate v0.3.7
  Downloaded base32 v0.5.1
  Downloaded bytemuck v1.25.0
  Downloaded png v0.18.1
  Downloaded moxcms v0.7.11
  Downloaded image v0.25.9
  Downloaded pxfm v0.1.27
    Checking simd-adler32 v0.3.8
    Checking pxfm v0.1.27
    Checking sha1 v0.10.6
    Checking bytemuck v1.25.0
    Checking miniz_oxide v0.8.9
    Checking fdeflate v0.3.7
    Checking byteorder-lite v0.1.0
    Checking qrcodegen v1.8.0
    Checking sqlx-mysql v0.7.4
    Checking flate2 v1.1.9
    Checking base32 v0.5.1
    Checking constant_time_eq v0.3.1
    Checking auth-cache v0.1.0 (/app/crates/auth-cache)
    Checking png v0.18.1
warning: unused import: `error`
 --> crates/auth-cache/src/lib.rs:6:22
  |
6 | use tracing::{debug, error};
  |                      ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> crates/auth-cache/src/lib.rs:86:61
   |
86 |             let _: redis::Value = conn.set_ex(key, val_str, ttl.as_secs() as usize).await?;
   |                                        ------               ^^^^^^^^^^^^^^^^^^^^^^ expected `u64`, found `usize`
   |                                        |
   |                                        arguments to this method are incorrect
   |
note: method defined here
  --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/redis-0.24.0/src/commands/mod.rs:83:8
   |
83 |     fn set_ex<K: ToRedisArgs, V: ToRedisArgs>(key: K, value: V, seconds: u64) {
   |        ^^^^^^
help: you can convert a `usize` to a `u64` and panic if the converted value doesn't fit
   |
86 |             let _: redis::Value = conn.set_ex(key, val_str, (ttl.as_secs() as usize).try_into().unwrap()).await?;
   |                                                             +                      +++++++++++++++++++++

For more information about this error, try `rustc --explain E0308`.
warning: `auth-cache` (lib) generated 1 warning
error: could not compile `auth-cache` (lib) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
